--- a/card.html
+++ b/card.html
@@ -8,7 +8,7 @@
 <body>
      <div class="card">
         <div class="card-header">
-            <img src="https://i.pinimg.com/736x/39/cf/8c/39cf8c12f7d43b424baaacf7290bba5b.jpg"
+            <img src="https://down-br.img.susercontent.com/file/br-11134211-7r98o-lvkl3jzs73an78">
       </div>
       <div class="card-body">
            <h2>Fernando Pufe</h2>
@@ -18,6 +18,6 @@
            <p>Eu nao chega a hora de terminar de estudar.</p>
        </div>
      </div>
-   
+
 </body>
 </html>
