--- a/card.html
+++ b/card.html
@@ -11,8 +11,8 @@
             <img src="https://down-br.img.susercontent.com/file/br-11134211-7r98o-lvkl3jzs73an78">
       </div>
       <div class="card-body">
-           <h2>Fernando Pufe</h2>
-           <p>Professor</p>
+           <h2>princess</h2>
+           <p>Tiana</p>
        </div>
        <div class="card-footer">
            <p>Eu nao chega a hora de terminar de estudar.</p>
